--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -14,6 +15,13 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildFeatures {
@@ -35,30 +43,68 @@ android {
     }
 }
 
-final coreKtx = "1.6.0"
-final appcompat = "1.3.1"
-final material = "1.4.0"
-final constraintLayout = "2.1.0"
-final legacy = "legacy-support-v4:1.0.0"
-final navigationFragmentVersion = "2.3.5"
-
-
-
 dependencies {
+    final corektxVersion = "1.2.0"
+    final materialVersion = "1.3.0"
+    final constraintlayoutVersion = "2.0.4"
+    final navigationFragmentVersion = "2.3.4"
+    final appcompatVersion = "1.3.0"
+    final recyclerviewVersion = "1.2.1"
+    final cardviewVersion = "1.0.0"
+    final legacySupportVersion = "1.0.0"
+    final junitVersion = "4.+"
+    final testJunitVersion = "1.1.2"
+    final testEspressoVersion = "3.3.0"
+    final coil = "0.12.0"
+    final maps = "3.1.0-beta"
+    final gms = "18.0.0"
+    final rxJavaAndroid = "3.0.0"
+    final koinVersion ="3.1.2"
+    final lifecycleRuntimeKtx = "2.4.0-alpha03"
+    final lifecycleExtensions = "2.2.0"
+    final lifecycleViewmodelKtx = "2.3.1"
+    final lifecycleLivedataKtx = "2.3.1"
+    final kotlin_version = "1.5.20"
 
     implementation project(":domain")
     implementation project(':data')
 
-    implementation "androidx.core:core-ktx:$coreKtx"
-    implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "com.google.android.material:material:$material"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintLayout"
-    implementation "androidx.legacy:$legacy"
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-
-    //navigation
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.core:core-ktx:$corektxVersion"
+    implementation "androidx.appcompat:appcompat:$appcompatVersion"
+    implementation "com.google.android.material:material:$materialVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationFragmentVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$navigationFragmentVersion"
+    implementation "androidx.recyclerview:recyclerview:$recyclerviewVersion"
+    implementation "androidx.cardview:cardview:$cardviewVersion"
+    implementation "androidx.legacy:legacy-support-v4:$legacySupportVersion"
+    testImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test.ext:junit:$testJunitVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$testEspressoVersion"
+
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleRuntimeKtx"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleExtensions"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleViewmodelKtx"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleLivedataKtx"
+
+    //Coil
+    implementation("io.coil-kt:coil:$coil")
+    implementation("io.coil-kt:coil-svg:$coil")
+
+    //RxJava
+    implementation "io.reactivex.rxjava3:rxandroid:$rxJavaAndroid"
+
+    //Maps
+    implementation "com.google.android.gms:play-services-location:$gms"
+    implementation "com.google.android.libraries.maps:maps:$maps"
+
+    //Koin
+    implementation "io.insert-koin:koin-core:$koinVersion"
+    // Koin main features for Android (Scope,ViewModel ...)
+    implementation "io.insert-koin:koin-android:$koinVersion"
+    // Koin Java Compatibility
+    implementation "io.insert-koin:koin-android-compat:$koinVersion"
+    // Koin for Jetpack WorkManager
+    implementation "io.insert-koin:koin-androidx-workmanager:$koinVersion"
 }
