--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -31,14 +32,37 @@ android {
     }
 }
 
+final retrofit = "2.9.0"
+final converterGson = "2.9.0"
+final okhttp = "4.9.0"
+final rxJavaRetrofit = "3.0.0"
+def room_version = "2.3.0"
+final loggingInterceptor = "4.9.0"
+
 dependencies {
 
     implementation project(':domain')
 
+    //Network
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$converterGson"
+    implementation"com.squareup.okhttp3:okhttp:$okhttp"
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:$rxJavaRetrofit"
+    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptor"
+
+    //Room
+    implementation("androidx.room:room-runtime:$room_version")
+    kapt("androidx.room:room-compiler:$room_version")
+    implementation "androidx.room:room-rxjava3:$room_version"
+
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
 }
