--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,9 +1,49 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'java-library'
     id 'kotlin'
+
 }
+
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_7
     targetCompatibility = JavaVersion.VERSION_1_7
+}
+
+//repositories {
+//    mavenCentral()
+//}
+
+def rxJava ="3.0.13"
+
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //RxJava
+    api "io.reactivex.rxjava3:rxjava:$rxJava"
+    //Flow
+    api "org.jetbrains.kotlin:kotlin-stdlib:1.5.21"
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1-native-mt'
+
+}
+
+
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
