--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,10 +44,11 @@ android {
 }
 
 dependencies {
+
     final corektxVersion = "1.2.0"
     final materialVersion = "1.3.0"
     final constraintlayoutVersion = "2.0.4"
-    final navigationFragmentVersion = "2.3.4"
+    final navigationFragmentVersion = "2.3.5"
     final appcompatVersion = "1.3.0"
     final recyclerviewVersion = "1.2.1"
     final cardviewVersion = "1.0.0"
@@ -65,6 +66,7 @@ dependencies {
     final lifecycleViewmodelKtx = "2.3.1"
     final lifecycleLivedataKtx = "2.3.1"
     final kotlin_version = "1.5.20"
+    final googlePlayVersion = "17.0.0"
 
     implementation project(":domain")
     implementation project(':data')
@@ -96,8 +98,9 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxandroid:$rxJavaAndroid"
 
     //Maps
-    implementation "com.google.android.gms:play-services-location:$gms"
-    implementation "com.google.android.libraries.maps:maps:$maps"
+    implementation "com.google.android.gms:play-services-location:$googlePlayVersion"
+    implementation "com.google.android.gms:play-services-maps:$googlePlayVersion"
+//    implementation "com.google.android.libraries.maps:maps:$maps"
 
     //Koin
     implementation "io.insert-koin:koin-core:$koinVersion"
