--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDHDYZuYtYIMHtM-Fm2DIAyjC50an8plic"/>
+            android:value="${MAPS_API_KEY}"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
